ADD_LIBRARY(OCLintDriver
    CompilerInstance.cpp
    ConfigFile.cpp
    DiagnosticDispatcher.cpp
    Driver.cpp
    GenericException.cpp
    Logger.cpp
    Options.cpp
    RulesetBasedAnalyzer.cpp
    RulesetFilter.cpp
    )
TARGET_LINK_LIBRARIES(OCLintDriver
    PUBLIC
    OCLintCore
    OCLintAbstractRule
    clangStaticAnalyzerFrontend
    clangAST
    clangFrontend
    clangTooling
    )
TARGET_INCLUDE_DIRECTORIES(OCLintDriver
    PUBLIC
    ../include
    )
